<resources>
    <string name="app_name">Bwa-hahaha</string>
    <string name="timer">Time Left</string>
    <string-array name="sample_categories">
        <item>1 Client Recognition</item>
        <item>2 Cloud Recognition</item>
        <item>3 Rendering</item>
        <item>4 Plugins</item>
        <item>5 Camera Control</item>
    </string-array>

    <string-array name="clientRecognition_samples">
        <item>1.1 Simple</item>
        <item>1.2 Extended Tracking</item>
        <item>1.3 Tracking 3D</item>
    </string-array>

    <string-array name="cloudRecognition_samples">
        <item>2.1 On-Click</item>
        <item>2.2 Continuous Mode</item>
    </string-array>

    <string-array name="rendering_samples">
        <item>3.1 Internal Rendering</item>
        <item>3.2 External Rendering</item>
    </string-array>

    <string-array name="plugins_samples">
        <item>4.1 QR &amp; Barcode</item>
        <item>4.2 Face Detection</item>
        <item>4.3 Custom Camera</item>
    </string-array>

    <string-array name="cameraControl_samples">
        <item>5.1 Control</item>
    </string-array>

    <string name="on_click_cloud_tracking_recognize_button">Recognize</string>
    <string name="camera_control_flash">Flashlight</string>
    <string name="camera_control_zoom">Zoom</string>
    <string name="tracking_quality_indicator_bad">Tracking Quality: Bad</string>
    <string name="tracking_quality_indicator_average">Tracking Quality: Average</string>
    <string name="tracking_quality_indicator_good">Tracking Quality: Good</string>
    <string name="barcode_hint">Scan the target image and/or any barcode</string>
    <string name="tracking_map_recorder">Tracking Map\nRecorder</string>
    <string name="tracking_recorder_start_recording">Start Recording</string>
    <string name="tracking_recorder_stop_recording">Stop Recording</string>
    <string name="send_tracking_map_recording">Send Tracking Map to …</string>
    <string name="tracking_map_save_message">Saving file, please wait …</string>
    <string name="client_tracking_3d_save_message">Please wait, while the Tracking Map is being saved and loaded ...</string>
    <string name="tracking_map_recorder_save_successful">Saved successfully ...</string>
    <string name="tracking_map_recorder_discard_button">Discard</string>
    <string name="tracking_map_recorder_share_button">Share</string>
    <string name="tracking_map_recorder_file_name_label">Tracking Map filename</string>

    <string-array name="camera_positions">
        <item>Back Camera</item>
        <item>Front Camera</item>
    </string-array>

    <string-array name="focus_mode">
        <item>Focus Continuously</item>
        <item>Focus Once</item>
    </string-array>
    <string name="title_activity_custom_camera">CustomCameraActivity</string>

    <string name="help_info">Shoot em all.Yes. Try to shoot as much faces as you can in the time that you are given</string>

</resources>
