<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/client_tracking_3d_quality_indicator"
        android:background="@color/wikitude_orange_light"
        android:text="@string/tracking_quality_indicator_bad"
        android:visibility="invisible"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:padding="5dp"/>

    <TextView
        android:id="@+id/client_tracking_3d_save_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:background="@color/wikitude_orange_light"
        android:visibility="invisible"
        android:padding="10dp"
        android:gravity="center"
        android:text="@string/client_tracking_3d_save_message"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/transparent">
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <Button
                android:id="@+id/client_tracking_3d_stop_recording"
                android:visibility="invisible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/tracking_recorder_stop_recording"
                android:layout_weight=".25"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp" />
        </TableRow>
    </TableLayout>
</RelativeLayout>